--- a/circle.yml
+++ b/circle.yml
@@ -10,7 +10,7 @@ dependencies:
     - sudo apt-get install libjansson-dev
     - sudo apt-get install ratpoison
     - git clone https://github.com/navit-gps/navit.git
-    - cd navit; mkdir bin; cd bin; cmake -D graphics/qt_qpainter:BOOL=FALSE -D gui/qml:BOOL=FALSE ../navit && make
+    - cd navit; mkdir bin; cd bin; cmake -D graphics/qt_qpainter:BOOL=FALSE -D gui/qml:BOOL=FALSE ../ && make
 machine:
   environment:
     DISPLAY: :97
